--- a/RestApi/package.json
+++ b/RestApi/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.7.1",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.0",
+    "lodash": "^4.13.1",
     "mongoose": "^4.5.1",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
