--- a/RestApi/package.json
+++ b/RestApi/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.5.1",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.0.0"
+    "passport-jwt": "^2.0.0",
+    "q": "^1.4.1"
   }
 }
