Fixed a couple of issues to get the API running and added a new equipment payment service.

--- a/EquipmentApi/package.json
+++ b/EquipmentApi/package.json
@@ -30,10 +30,11 @@
     "feathers-configuration": "^0.2.3",
     "feathers-errors": "^2.2.0",
     "feathers-hooks": "^1.5.4",
-    "feathers-mongoose": "^3.5.1",
+    "feathers-mongoose": "^3.5.2",
     "feathers-rest": "^1.4.2",
     "feathers-socketio": "^1.4.1",
     "mongoose": "^4.5.3",
+    "mongoose-currency": "^0.2.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-facebook-token": "^3.3.0",
