--- a/EquipmentWeb/bower.json
+++ b/EquipmentWeb/bower.json
@@ -21,6 +21,10 @@
     "requirejs": "^2.2.0",
     "font-awesome": "^4.6.3",
     "domReady": "^2.0.1",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "material-angular-paging": "*"
+  },
+  "resolutions": {
+    "angular": "^1.5.8"
   }
 }
